<resources>
  <string name="quoted_text">\"%s\"</string>
  <string name="two_items">%1$s and %2$s</string>
  <string name="more_than_two_items">%1$s, and %2$s</string>
  <string name="month_day_format">MMM d</string>
  <string name="year_month_day_format">MMM d, yyyy</string>
  <string name="hour_minute_format">HH:mm</string>
  <string name="end_of_day_hour_minute">24:00</string>
  <string name="month_day_hour_minute_format">MMM d, HH:mm</string>
  <string name="sentence_month_day_format">\'on\' MMM d</string>
  <string name="sentence_year_month_day_format">\'on\' MMM d, yyyy</string>
  <string name="sentence_hour_minute_format">\'at\' HH:mm</string>
  <string name="sentence_month_day_hour_minute_format">\'on\' MMM d \'at\' HH:mm</string>
  <string name="sentence_yesterday">yesterday</string>
  <string name="sentence_today">today</string>
  <string name="sentence_tomorrow">tomorrow</string>
  <string name="relative_month_day_format">MMM d</string>
  <string name="relative_year_month_day_format">MMM d, yyyy</string>
  <string name="relative_hour_minute_format">HH:mm</string>
  <string name="relative_month_day_hour_minute_format">HH:mm \'on\' MMM d</string>
  <string name="relative_yesterday">yesterday</string>
  <string name="relative_today">today</string>
  <string name="relative_tomorrow">tomorrow</string>
  <string name="authorization_required">This device is not authorized.  To access patient data, please enter your OpenMRS account credentials.</string>
  <string name="authorize">Authorize</string>
  <string name="authorization_successful">This device is now authorized.</string>
  <string name="authorization_failed">Authorization failed.</string>
  <string name="server_connection_failed">Could not connect to server.  Please check the server and OpenMRS account settings.</string>
  <string name="title_authorizing">Authorizing</string>
  <string name="status_unknown">Unknown</string>
  <string name="status_well">Well</string>
  <string name="status_unwell">Unwell</string>
  <string name="status_critical">Critical</string>
  <string name="status_palliative">Palliative</string>
  <string name="status_convalescent">Convalescing</string>
  <string name="status_discharged_non_case">Discharged Non-Case</string>
  <string name="status_discharged_cured">Discharged Cured</string>
  <string name="status_suspected_dead">Suspected Dead</string>
  <string name="status_confirmed_dead">Confirmed Dead</string>
  <string name="title_patient_list">Patients</string>
  <string name="title_patient_chart">Patient chart</string>
  <string name="title_activity_patient_add">New patient</string>
  <string name="cancel">Cancel</string>
  <string name="action_new_patient">Add new patient</string>
  <string name="action_view_xform">View first saved xform</string>
  <string name="action_new_round">New round</string>
  <string name="action_assign_location">Assign location</string>
  <string name="bed_number">Bed number</string>
  <string name="action_edit_patient">Edit patient</string>
  <string name="action_view_round_archive">Round archive</string>
  <string name="snackbar_update_available">Application update available</string>
  <string name="snackbar_update_downloaded">Application update downloaded</string>
  <string name="snackbar_action_download">Download</string>
  <string name="snackbar_action_install">Install</string>
  <string name="title_edit_patient_location">Edit patient location</string>
  <string name="given_name">Given name</string>
  <string name="family_name">Family name</string>
  <string name="title_new_user">New user</string>
  <string name="guest_user_initials">G</string>
  <string name="guest_user_name">Guest</string>
  <string name="action_search">Search</string>
  <string name="action_edit">Edit</string>
  <string name="action_go_to">Search by ID</string>
  <string name="action_zoom">Zoom</string>
  <string name="title_location_list">Locations</string>
  <string name="today">Today</string>
  <string name="today_date">Today, %s</string>
  <string name="day_n">Day %d</string>
  <string name="add_user_unknown_error">Unknown error</string>
  <string name="add_user_invalid_user">Invalid user</string>
  <string name="add_user_user_exists_locally">User already exists on tablet</string>
  <string name="add_user_user_exists_on_server">Username already exists on server</string>
  <string name="add_user_connection_error">Error connecting to server</string>
  <string name="title_single_location">Patients at this location</string>
  <string name="no_locations">No locations</string>
  <string name="no_patients">No patients</string>
  <string name="one_patient">1 patient</string>
  <string name="n_patients">%d patients</string>
  <string name="no_present_patients">No present patients</string>
  <string name="one_present_patient">1 present patient</string>
  <string name="n_present_patients">%d present patients</string>
  <string name="sex_unknown">Sex unknown</string>
  <string name="age_unknown">age unknown</string>
  <string name="abbrev_n_months">%d mo</string>
  <string name="abbrev_n_years">%d y</string>
  <string name="abbrev_n_years_n_months">%1$d y %2$d mo</string>
  <string name="treatments">Treatments</string>
  <string name="add_new_treatment">Add a new treatment</string>
  <string name="title_new_order">New treatment</string>
  <string name="title_edit_order">Edit treatment</string>
  <string name="order_drug">Drug</string>
  <string name="order_format">Format</string>
  <string name="order_dosage">Dosage</string>
  <string name="order_volume_unit_in">%s in</string>
  <string name="order_route">Route</string>
  <string name="order_is_series_prefix">Give</string>
  <string name="oral_category">Oral</string>
  <string name="injectable_category">Injectable</string>
  <string name="infusible_category">Perfusion</string>
  <string name="external_category">External</string>
  <string name="vaccine_category_abbr">Vaccine</string>
  <string name="amount_in_duration">%1$s in %2$s</string>
  <string name="once">Once</string>
  <string name="multiple_times">Multiple times</string>
  <string name="order_start_now_indefinitely">(start now; continue indefinitely)</string>
  <string name="order_start_now_stop_after_n_doses">(start now; stop after %d doses)</string>
  <string name="order_start_now_after_n_doses_stop_date">(start now; after %1$d doses, stop %2$s)</string>
  <string name="order_one_dose_only_ordered_date">(one dose only, ordered %s)</string>
  <string name="order_started_date_stopped_date">(started %1$s; stopped %2$s)</string>
  <string name="order_started_date_indefinitely">(started %s; continue indefinitely)</string>
  <string name="order_n_doses_in_one_day_ordered_date">(%1$d doses in one day, ordered %2$s)</string>
  <string name="order_started_date_after_n_doses_stop_date">(started %1$s; after %2$d doses, stop %3$s)</string>
  <string name="order_notes">Notes</string>
  <string name="enter_medication">Enter a medication</string>
  <string name="enter_dosage">Enter a dosage</string>
  <string name="enter_duration">Enter a duration</string>
  <string name="enter_number">Enter a number</string>
  <string name="order_series_duration_prefix">For</string>
  <string name="order_give_for_days_cannot_be_zero">Must be empty or greater than 0</string>
  <string name="order_cannot_exceed_n_times_per_day">Cannot exceed %d times per day</string>
  <string name="order_cannot_exceed_n_days">Cannot exceed %d days</string>
  <string name="order_cannot_stop_in_past">Cannot be stopped in the past</string>
  <string name="order_stop_now">Stop now</string>
  <string name="order_delete">Delete this treatment</string>
  <string name="title_confirmation">Confirmation</string>
  <string name="confirm_order_stop">Stop this treatment now?</string>
  <string name="confirm_order_delete">Delete this treatment?</string>
  <string name="delete">Delete</string>
  <string name="select_dosage_unit">Dosage unit</string>
  <string name="select_duration_unit">Duration unit</string>
  <string name="unit_with_abbreviation">%1$s (%2$s)</string>
  <string name="route_of_administration">Route of administration</string>
  <string name="order_execution_title">Treatment history %s</string>
  <string name="order_dosage_unary">%1$s</string>
  <string name="order_dosage_series">%1$s, given %2$sx daily</string>
  <string name="order_unspecified_dosage">Unspecified dosage</string>
  <string name="order_frequency_value">%1$dx/day</string>
  <string name="order_execution_format">Format: %s</string>
  <string name="order_execution_dosage">Dosage: %s</string>
  <string name="order_execution_historical_singular_html">Given &lt;b&gt;once&lt;/b&gt; %2$s</string>
  <string name="order_execution_historical_plural_html">Given &lt;b&gt;%1$d&lt;/b&gt; times %2$s</string>
  <string name="order_execution_today_singular_html">Given &lt;b&gt;once&lt;/b&gt; today</string>
  <string name="order_execution_today_plural_html">Given &lt;b&gt;%1$d&lt;/b&gt; times today</string>
  <string name="order_execution_mark_as_given_now">Mark as given now</string>
  <string name="order_execution_marked_as_given_now">&#x2713; Marked as given now</string>
  <string name="order_started_datetime">Started %s</string>
  <string name="title_next_treatment">Next treatment</string>
  <string name="add_another_treatment">Add another treatment?</string>
  <string name="done">Done</string>
  <string name="unknown_tent">Unknown tent</string>
  <string name="unknown_zone">Unknown zone</string>
  <string name="mild_symptom">Mild</string>
  <string name="moderate_symptom">Moderate</string>
  <string name="severe_symptom">Severe</string>
  <string name="location_load_error">Error loading location data</string>
  <string name="unknown_location">Unknown location</string>
  <string name="unknown_tent_in_zone">%s (no tent assigned)</string>
  <string name="chart_last_updated">"Chart last updated: "</string>
  <string name="last_observation_none">No observations</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="other">Other</string>
  <string name="unknown">Unknown</string>
  <string name="sex_male_abbreviation">M</string>
  <string name="sex_female_abbreviation">F</string>
  <string name="sex_other_abbreviation">O</string>
  <string name="title_updating_patient">Updating patient</string>
  <string name="title_adding_new_patient">Adding new patient</string>
  <string name="please_wait_ellipsis">Please wait&#8230;</string>
  <string name="updating_patient_please_wait">Updating patient; please wait...</string>
  <string name="adding_new_patient_please_wait">Adding new patient; please wait...</string>
  <string name="title_zoom">Set zoom level</string>
  <string name="zoom_day">1 column per day</string>
  <string name="zoom_half">2 columns per day</string>
  <string name="zoom_third">3 columns per day</string>
  <string name="zoom_bunia_etc">Column boundaries at 8:00, 13:00, 18:00 (Bunia ETC shift changes)</string>
  <string name="zoom_quarter">4 columns per day</string>
  <string name="zoom_sixth">6 columns per day</string>
  <string name="go_to_patient_title">Go to patient chart</string>
  <string name="patient_id">Patient ID</string>
  <string name="searching_ellipsis">Searching&#8230;</string>
  <string name="patient_not_found">No patient found with ID %s</string>
  <string name="go_to_chart">Go to chart</string>
  <string name="id">ID</string>
  <string name="id_prefix">ID prefix</string>
  <string name="age">Age</string>
  <string name="years">years</string>
  <string name="months">months</string>
  <string name="sex">Sex</string>
  <string name="patient_creation_location_label">Location</string>
  <string name="add_patient">Create</string>
  <string name="admission_date_label">Admission date</string>
  <string name="symptoms_onset_date_label">Symptom onset date</string>
  <string name="cancel_sync">Cancel Sync</string>
  <string name="patient_creation_clear_symptom_onset_date">Clear</string>
</resources>