<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="org.msf.records.ui.MainScreenFragment"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp"
    android:paddingTop="100dp"
    android:background="#bbbbbb">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_new_patient"
        android:id="@+id/new_patient_button"
        style="@style/button_large"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_new_round"
        android:id="@+id/new_round_button"
        android:visibility="invisible"
        style="@style/button_large" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_view_round_archive"
        android:id="@+id/round_archive_button"
        android:visibility="invisible"
        style="@style/button_large" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_view_xform"
        android:id="@+id/view_xform_button"
        android:visibility="invisible"
        style="@style/button_large" />
</LinearLayout>
